# mandragora

./: .XCompose  .Xdefaults  .Xmodmap  .Xresources  .bash_aliases  .bash_profile  .bashrc  .compton.conf  .conky-i3bar  .conkyrc  .dotty.json  .dottyrc.json  .emacs  .fehbg  .gitignore  .gitmodules  .ideavimrc  .lf_aliases  .mbsyncrc  .mostrc  .msmtprc  .nexor.ascii  .notmuch-config  .npmrc  .p10k.zsh  .pythonrc  .ranger_aliases  .scimrc  .sops.yaml  .start-de  .streamlinkrc  .taskrc  .tigrc  .tmux.conf  .tridactylrc  .urlview  .vimfx  .vimium  .vimrc  .xinitrc  (+25 more)
.axon/: index.duckdb
.calcurse/: conf
.claude/: CLAUDE.md  settings.json
.config/: keyledsd.conf  keyledsd.template.conf  mpd  picom.conf
.gdmap/: colors.xml  settings.ini
.gemini/: GEMINI.md  settings.json
.irssi/: config
.local/share/llm-via-telegram/: config.py  main.py  pyproject.toml
.local/share/llm-via-telegram/bot/: __init__.py
.local/share/llm-via-telegram/bot/commands/: __init__.py  browser.py  firefox.py  intelligence.py  mpv.py  registry.py  system.py  voice.py
.local/share/llm-via-telegram/bot/helpers/: __init__.py  formatter.py  marionette_mgr.py  mpv_ipc.py  ollama.py  shell.py  sudo_cache.py  transcribe.py  web.py
.local/share/llm-via-telegram/db/: __init__.py  store.py
.local/share/meme-tagger/: cli.py  config.py  find.py  main.py  pyproject.toml
.local/share/meme-tagger/bot/: __init__.py  handlers.py
.local/share/meme-tagger/pipeline/: dispatcher.py  postprocess.py  preprocess.py  schema.py  sidecar.py  vlm.py
.local/share/stt-core/: bot.sh  config.py  main.py  pyproject.toml  transcribe.py
.local/share/stt-core/static/: index.html
.local/share/stt-via-telegram/: bot.sh  config.py  main.py  pyproject.toml  transcribe.py
.local/share/tts-clone-core/: bot.sh  config.py  main.py  pyproject.toml  tts.py
.local/share/tts-clone-core/static/: index.html
.netbeans/: .superId
.newsboat/: config  urls
.peaclock/: config
.ptpython/: config.py  ptpythonrc.py
.qwen/: QWEN.md  SKILL.md  output-language.md  settings.json  settings.json.orig
.ssh/: rc
_bmad/: config.yaml  module-help.csv
_bmad-output/: project-context.md
ai-shared/: marionette_youtube.py
atlas/: METADATA.md  OPEN_DECISIONS.md  PARTITION_PLAN.md  PRD.md  README.md  TODO.md  architecture.md  hardware.md  ideation.md  inspiration.md  non-negotiables.md  software.md
docs/: architecture.md  audits.md  deployment-guide.md  development-guide.md  gpu.md  handoff.md  hardware.md  index.md  keystats.md  model-migration.md  multi-agent-safety.md  north-star.md  persistence.md  project-context.md  project-overview.md  project-scan-report.json  python.md  secrets.md  source-tree-analysis.md  workflow.md  worktrees.md
etc/: pacman.conf  sudo.conf
install/: INSTALL.md  bootstrap-age-key.sh  install.sh
pkgs/: bot-python.nix  gpu-lock.nix  overlays.nix
refiner/: auto-install.sh  default.nix  lib.sh  run-vm.sh
secrets/: secrets.yaml  usb-key.age
snippets/: INSTALL.md  XCompose  aliases.zsh  format-drive.sh  gemma.py  health-check.sh  hyprland.conf  keyleds-extra-input.patch  keyleds-host-mode.py  local-ai-mcp-server.py  mandragora-switch.sh  mount-install.sh  p10k.zsh  rofi-db-picker.sh  (+15 more)
(+1529 files in other folders)
