[project]
name = "meme-tagger"
version = "0.1.0"
description = "Local-VLM image tagging CLI. Qwen2.5-VL + RapidOCR + sidecar JSON; grep/jq retrieval via meme-find."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "av>=12.0.0",
    "rapidocr-onnxruntime>=1.3.0",
    "piexif>=1.1.3",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.uv]
package = false
