[project]
name = "tts-clone-core"
version = "0.1.0"
description = "Mandragora voice-imitation core service (F5-TTS, GPU-coordinated)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "f5-tts",
  "huggingface-hub",
  "num2words>=0.5",
  "torch",
  "torchaudio",
]
